fix: modified the gap between rounds and matches

--- a/css/tournament.css
+++ b/css/tournament.css
@@ -221,6 +221,11 @@ body {
 
 /* -------- TABLET -------- */
 @media (max-width: 768px) {
+
+    .bracket-wrapper {
+        gap: 20px;
+    }
+
     .match {
         width: 140px;
         height: 90px;
@@ -231,7 +236,7 @@ body {
         font-size: 0.85em;
     }
 
-    .round-1 { --round-gap: 90px; }
+    .round-1 { --round-gap: 60px; }
     .round-2 { --round-gap: 60px; }
     .round-3 { --round-gap: 135px; }
     .round-4 { --round-gap: 280px; }
@@ -264,6 +269,11 @@ body {
 
 /* -------- SMALL MOBILE -------- */
 @media (max-width: 590px) {
+
+    .bracket-wrapper {
+        gap: 20px;
+    }
+
     .match {
         width: 110px;
         height: 50px;
@@ -274,8 +284,8 @@ body {
         font-size: 0.75em;
     }
 
-    .round-1 { --round-gap: 90px; }
-    .round-2 { --round-gap: 40px; }
+    .round-1 { --round-gap: 80px; }
+    .round-2 { --round-gap: 70px; }
     .round-3 { --round-gap: 100px; }
     .round-4 { --round-gap: 210px; }
 
@@ -318,8 +328,8 @@ body {
         font-size: 0.7em;
     }
 
-    .round-1 { --round-gap: 90px; }
-    .round-2 { --round-gap: 48px; }
+    .round-1 { --round-gap: 70px; }
+    .round-2 { --round-gap: 70px; }
     .round-3 { --round-gap: 85px; }
     .round-4 { --round-gap: 175px; }
 
@@ -358,7 +368,7 @@ body {
     }
 
     .round-1 { --round-gap: 90px; }
-    .round-2 { --round-gap: 30px; }
+    .round-2 { --round-gap: 70px; }
     .round-3 { --round-gap: 70px; }
     .round-4 { --round-gap: 145px; }
 
@@ -398,7 +408,7 @@ body {
     }
 
     .round-1 { --round-gap: 90px; }
-    .round-2 { --round-gap: 30px; }
+    .round-2 { --round-gap: 70px; }
     .round-3 { --round-gap: 70px; }
     .round-4 { --round-gap: 145px; }
 
